--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ata Operacional Porter - 2026</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -13,7 +14,6 @@
 <section id="login-screen">
     <div class="login-container">
         <div class="login-logo">
-            <!-- LOGO DA PORTER ADICIONADO AQUI -->
             <div class="login-logo-img"></div>
             <h1>Ata Operacional Porter</h1>
             <p>Sistema de Registro de Ocorrências - 2026</p>
@@ -63,7 +63,6 @@
                 <i class="fas fa-bars"></i>
             </button>
             <div class="header-logo">
-                <!-- LOGO DA PORTER NO HEADER -->
                 <div class="logo-porter"></div>
                 <div class="header-logo-text">
                     <strong>ATA OPERACIONAL PORTER</strong>
@@ -630,7 +629,7 @@
 
 <!-- 4. Seus dados e scripts (TERCEIRO) -->
 <script src="data.js"></script>
-<script src="aplicativo-email.js"></script>
+<script src="app-email.js"></script>
 <script src="app.js"></script>
 
 </body>
