--- a/index.html
+++ b/index.html
@@ -2142,7 +2142,7 @@ table tr:hover {
                 </div>
                 <p style="margin-top: 1.5rem; color: var(--gray); font-size: 0.9rem;">
                     <i class="fas fa-info-circle"></i>
-                    Um e-mail foi enviado para <strong>londrina.tecnica1@porter.com.br, londrina.tecnicaplantao@porter.com.br, londrina.tenicaplantão1@porter.com.br</strong> com todos os detalhes.
+                    Um e-mail foi enviado para <strong>londrina.tecnica1@porter.com.br, londrina.tecnicaplantao@porter.com.br, londrina.tenicaplantao1@porter.com.br</strong> com todos os detalhes.
                     Os técnicos responderão diretamente por e-mail.
                 </p>
                 <div class="back-to-os">
@@ -5863,3 +5863,4 @@ window.onload = () => app.init();
 </script>
 </body>
 </html>
+
