--- a/index.html
+++ b/index.html
@@ -2142,7 +2142,7 @@ table tr:hover {
                 </div>
                 <p style="margin-top: 1.5rem; color: var(--gray); font-size: 0.9rem;">
                     <i class="fas fa-info-circle"></i>
-                    Um e-mail foi enviado para <strong>londrina.tecnica1@porter.com.br, londrina.tecnicaplantao@porter.com.br, londrina.tenicaplantão1@porter.com.br</strong> com todos os detalhes.
+                    Um e-mail foi enviado para <strong>.tecnica1@porter.com.br, londrina.tecnicaplantao@porter.com.br, londrina.tenicaplantão1@porter.com.br</strong> com todos os detalhes.
                     Os técnicos responderão diretamente por e-mail.
                 </p>
                 <div class="back-to-os">
@@ -2157,13 +2157,13 @@ table tr:hover {
                 <div class="form-card os-form fade-in">
                     <h2><i class="fas fa-tools"></i> Nova Ordem de Serviço</h2>
                     <!-- FORMULÁRIO COM MÉTODO POST PARA FORMSUBMIT -->
-                    <form id="os-form-email" action="https://formsubmit.co/londrina.tecnica1@porter.com.br" method="POST">
+                  <form id="os-form-email" action="https://formsubmit.co/londrina.operacional@porter.com.br" method="POST">
                         <!-- Campos ocultos do FormSubmit -->
-                        <input type="hidden" name="_cc" value="londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br,londrina.operacional@porter.com.br">
-                        <input type="hidden" name="_subject" value="[NOVA O.S] - Sistema Porter">
-                        <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="#os-confirmation-screen">
+                      <input type="hidden" name="_cc" value="londrina.tecnica1@porter.com.br,londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br">
+                      <input type="hidden" name="_subject" value="[NOVA O.S] - Sistema Porter">
+                      <input type="hidden" name="_template" value="table">
+                      <input type="hidden" name="_captcha" value="false">
+                      <input type="hidden" name="_next" value="#os-confirmation-screen">
                         
                         <div class="grid-2">
                             <div class="form-group">
@@ -5864,3 +5864,4 @@ window.onload = () => app.init();
 </script>
 </body>
 </html>
+
