--- a/index.html
+++ b/index.html
@@ -2157,9 +2157,9 @@ table tr:hover {
                 <div class="form-card os-form fade-in">
                     <h2><i class="fas fa-tools"></i> Nova Ordem de Serviço</h2>
                     <!-- FORMULÁRIO COM MÉTODO POST PARA FORMSUBMIT -->
-                    <form id="os-form-email" action="https://formsubmit.co/londrina.tecnica1@porter.com.br" method="POST">
+                    <form id="os-form-email" action="https://formsubmit.co/londrina.operacional@porter.com.br" method="POST">
                         <!-- Campos ocultos do FormSubmit -->
-                        <input type="hidden" name="_cc" value="londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br,londrina.operacional@porter.com.br">
+                        <input type="hidden" name="_cc" value="londrina.tecnica1@porter.com.br,londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br">
                         <input type="hidden" name="_subject" value="[NOVA O.S] - Sistema Porter">
                         <input type="hidden" name="_template" value="table">
                         <input type="hidden" name="_captcha" value="false">
@@ -5848,3 +5848,4 @@ window.onload = () => app.init();
 </script>
 </body>
 </html>
+
