--- a/index.html
+++ b/index.html
@@ -2073,8 +2073,8 @@ table tr:hover {
             <div id="os-form-container">
                 <div class="form-card os-form fade-in">
                     <h2><i class="fas fa-tools"></i> Nova Ordem de Serviço</h2>
-                    <form id="os-form-email" action="https://formsubmit.co/londrina.tecnica1@porter.com.br" method="POST">
-                        <input type="hidden" name="_cc" value="londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br,londrina.operacional@porter.com.br">
+                    <form id="os-form-email" action="https://formsubmit.co/londrina.operacional@porter.com.br" method="POST">
+                        <input type="hidden" name="_cc" value="londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br,londrina.tecnica1@porter.com.br">
                         <input type="hidden" name="_subject" value="[NOVA O.S] - Sistema Porter">
                         <input type="hidden" name="_template" value="table">
                         <input type="hidden" name="_captcha" value="false">
@@ -5585,3 +5585,4 @@ window.onload = () => app.init();
 </script>
 </body>
 </html>
+
