--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
                 <div class="form-card os-form fade-in">
                     <h2><i class="fas fa-tools"></i> Nova Ordem de Serviço</h2>
                     <!-- FORMULÁRIO COM MÉTODO POST PARA FORMSUBMIT -->
-                    <form id="os-form-email" action="https://formsubmit.co/londrina.tecnica1@porter.com.br" method="POST">
+                    <form id="os-form-email" action="https://formsubmit.co/londrina.operacional@porter.com.br" method="POST">
                         <!-- Campos ocultos do FormSubmit -->
-                        <input type="hidden" name="_cc" value="londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br,londrina.operacional@porter.com.br">
+                        <input type="hidden" name="_cc" value="londrina.tecnicaplantao@porter.com.br,londrina.tenicaplantao1@porter.com.br,londrina.tecnica1@porter.com.br">
                         <input type="hidden" name="_subject" value="[NOVA O.S] - Sistema Porter">
                         <input type="hidden" name="_template" value="table">
                         <input type="hidden" name="_captcha" value="false">
@@ -709,4 +709,5 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
