--- a/index.html
+++ b/index.html
@@ -639,22 +639,30 @@
     </div>
 </div>
 
-<!-- Firebase SDKs -->
+<!-- ============================================== -->
+<!-- FIREBASE SDKs (MANTENHA ESTES) -->
+<!-- ============================================== -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<!-- ⚠️ REMOVA firebase-database-compat.js (não precisa) -->
 
-<!-- Bibliotecas externas -->
+<!-- ============================================== -->
+<!-- BIBLIOTECAS EXTERNAS (MANTENHA) -->
+<!-- ============================================== -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
-<!-- 🔧 CORREÇÃO: Ordem correta dos scripts para sincronização -->
-<!-- NO index.html - MUDAR a ordem dos scripts -->
+<!-- ============================================== -->
+<!-- ORDEM CORRETA DOS SEUS SCRIPTS (ATUALIZADA) -->
+<!-- ============================================== -->
 <script src="data.js"></script>
 <script src="app.js"></script>
-<!-- 🔥 TROQUE firebase.js por firebase-optimized.js -->
-<script src="firebase-optimized.js"></script> <!-- NOME ATUALIZADO -->
+
+<!-- 🔥 ARQUIVO SIMPLES DO FIREBASE (NOVO PROJETO) -->
+<script src="firebase-simple.js"></script> <!-- ⬅️ NOVO E SIMPLES -->
+
+<!-- SEUS OUTROS ARQUIVOS -->
 <script src="app-email.js"></script>
 <script src="chat.js"></script>
 <script src="pdf.js"></script>
@@ -746,4 +754,5 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
