--- a/index.html
+++ b/index.html
@@ -645,11 +645,11 @@
 <!-- ORDEM ATUALIZADA -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
+<!-- SEUS SCRIPTS -->
 <script src="data.js"></script>
 <script src="app.js"></script>
-<script src="firebase-sincronia.js"></script> <!-- ⬅️ NOVO! -->
+<script src="firebase-universal.js"></script> <!-- ⬅️ APENAS ESTE! -->
 <script src="app-email.js"></script>
 <script src="chat.js"></script>
 <script src="pdf.js"></script>
@@ -740,6 +740,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
