--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 <!-- SEUS SCRIPTS -->
 <script src="data.js"></script>
 <script src="app.js"></script>
-<script src="firebase-universal.js"></script> <!-- ⬅️ APENAS ESTE! -->
+<script src="firebase-universal.js"></script> <!-- ⬅️ USE ESTE! -->
 <script src="app-email.js"></script>
 <script src="chat.js"></script>
 <script src="pdf.js"></script>
@@ -740,6 +740,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
