--- a/index.html
+++ b/index.html
@@ -646,10 +646,9 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-<!-- SEUS SCRIPTS -->
 <script src="data.js"></script>
 <script src="app.js"></script>
-<script src="firebase-universal.js"></script> <!-- ⬅️ USE ESTE! -->
+<script src="firebase-definitivo.js"></script> <!-- ⬅️ NOVO ARQUIVO -->
 <script src="app-email.js"></script>
 <script src="chat.js"></script>
 <script src="pdf.js"></script>
@@ -740,6 +739,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
