--- a/index.html
+++ b/index.html
@@ -654,7 +654,8 @@
 
 <!-- Nossos scripts (em ordem alfabética) -->
 <script src="data.js"></script>
-<script src="firebase.js"></script> <!-- DEVE vir ANTES de app.js -->
+<script src="firebase.js"></script>
+<script src="chat-firebase.js"></script> <!-- NOVO: Chat universal via Firebase -->
 <script src="app.js"></script>
 <script src="app-email.js"></script>
 <script src="chat.js"></script>
@@ -746,6 +747,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
 
 
 
