--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
             color: #856404;
         }
 
-        /* LOGIN SCREEN */
+        /*  SCREEN */
         #login-screen {
             min-height: 100vh;
             display: flex !important;
@@ -2045,9 +2045,9 @@
             </select>
         </div>
         <!-- 🔧 CORREÇÃO: Botão com ID para ser configurado via JavaScript -->
-        <button class="btn btn-primary" id="login-button">
-            <i class="fas fa-sign-in-alt"></i> ACESSAR SISTEMA
-        </button>
+        <button class="btn btn-primary" id="login-button" onclick="app.login()">
+    <i class="fas fa-sign-in-alt"></i> ACESSAR SISTEMA
+</button>
         <div style="margin-top: 1.5rem; text-align: center; font-size: 0.8rem; color: var(--gray);">
             <i class="fas fa-info-circle"></i> Use suas credenciais fornecidas pela Porter
         </div>
