--- a/index.html
+++ b/index.html
@@ -642,26 +642,24 @@
 <!-- ============================================== -->
 <!-- FIREBASE SDKs (MANTENHA ESTES) -->
 <!-- ============================================== -->
-<!-- ORDEM ATUALIZADA -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<!-- FIREBASE (MODO V8 CLÁSSICO) -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 
 <!-- Bibliotecas externas -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
-<!-- Nossos scripts (em ordem alfabética) -->
+<!-- SEUS ARQUIVOS -->
 <script src="data.js"></script>
-<script src="firebase.js"></script> <!-- APENAS OS e Online -->
+<script src="firebase.js"></script>
+<script src="chat.js"></script>
 <script src="app.js"></script>
 <script src="app-email.js"></script>
-<script src="chat.js"></script> <!-- Chat independente -->
 <script src="pdf.js"></script>
 <script src="utils.js"></script>
-<!-- 🔧 CORREÇÃO: Inicialização segura do sistema -->
-<script>
+
 // 🔧 CORREÇÃO: Inicialização segura do sistema
 document.addEventListener('DOMContentLoaded', function() {
     // Garantir que app existe globalmente
